# infrapilot-tools

./: B-C-contract.md  WORKLOG.md  backend-workflow-handoff.md  review-summary.md  week1-progress.md  week2-progress.md
InfraPilot/: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
InfraPilot/infrapilot_workflow/: __init__.py
InfraPilot/tests/workflow/: __init__.py  test_engine.py
InfraPilot/workflow/: __init__.py  engine.py
InfraPilot/workflow/builders/: __init__.py
InfraPilot/workflow/rendering/: __init__.py  renderer.py
InfraPilot/workflow/schemas/: __init__.py  inputs.py  plans.py
InfraPilot/workflow/templates/infra/: main.tf.j2
InfraPilot/workflow/templates/service/: main.tf.j2
InfraPilot/workflow/validation/: __init__.py  basic.py
integration-examples/: deploy_service_input.json  deploy_service_output_shape.json  setup_infra_input.json  setup_infra_output_shape.json
planning/: part3-implementation-plan.md
