[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infrapilot-workflow-core"
version = "0.1.0"
description = "Deterministic workflow planning core for InfraPilot."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3,<4",
    "pydantic>=2,<3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["workflow*", "infrapilot_workflow*"]

[tool.setuptools.package-data]
workflow = ["templates/**/*.j2"]
